# pokie

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  index.html  main.py  mkdocs.yml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  publish.yml  run-tests.yml  sbom.yml
cache/: index.html
cli/commands/: index.html
codegen/codegen/: index.html
configuration/: index.html
docs/: cache.md  configuration.md  events.md  factories.md  fixtures.md  index.md  jobs.md  messages.md  requirements.txt  signals.md
docs/auth/: acl.md  authentication.md  cli.md  users.md
docs/cli/: commands.md
docs/codegen/: codegen.md
docs/http/: camelcase_json_response.md  dbgridrequest.md  error_handler.md  extending_views.md  index.md  json_response.md  rest.md  views.md
docs/rest/: auto.md  services.md
docs/test/: pytest.md
docs/tutorial/: architecture.md  scaffolding.md  tutorial.md
docs/views/: rest.md
events/: index.html
example/: main.py
example/module/: constants.py  module.py
examples/: example_minimal.py
examples/auto/: README.MD  simple_autorest_app.py  simple_autoview_app.py
examples/auto_showcase/: main.py
examples/modular_app/: main.py  sample.py
factories/: index.html
fixtures/: index.html
http/camelcase_json_response/: index.html
http/dbgridrequest/: index.html
http/error_handler/: index.html
http/extending_views/: index.html
http/json_response/: index.html
http/rest/: index.html
http/views/: index.html
jobs/: index.html
messages/: index.html
pokie/: __main__.py  config.py  constants.py
pokie/cache/: memory.py  redis.py
pokie/cli/: pokie.py
pokie/codegen/: record.py  request.py  (+2 more)
pokie_test/: constants.py  module.py
search/: search_index.json
signals/: index.html
tests/: test_sample.py
views/: index.html
(+185 files in other folders)
