[metadata]
name = Pokie
version = attr: pokie.__version__
url = https://git.oddbit.org/OddBit/pokie
author = João Pinheiro
description = A high-level Python REST web framework based on Flask, Rick and RickDb.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.oddbit.org/pokie/
    Source = https://git.oddbit.org/OddBit/pokie

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    rick-db>=2.2.2
    rick>=0.8.3
    rick-mailer>=1.1.1
    Flask>=3.1.3
    Werkzeug>=3.1.8
    Flask-Login>=0.6.3
    iso8601>=2.1.0
    setuptools>=82.0.1
    tabulate>=0.10.0
    pyhumps>=3.8.0
    redis>=8.0.0
    flask-cors>=6.0.2
    flask-limiter>=4.1.1

[options.entry_points]
console_scripts =
    pokie=pokie.cli.pokie:main

[bdist_rpm]
doc_files =
    docs
    README.md
    pokie/contrib/base/template

[tool:pytest]
testpaths = tests

[flake8]
exclude = dist,build,.git,.tox,./tests/
extend-ignore = E501, W504 ,F401
max-line-length = 120
